--- a/gradle.properties
+++ b/gradle.properties
@@ -4,10 +4,11 @@ pacprofile_version = 1.2.1
 
 paper_version = 1.18.2-R0.1-SNAPSHOT
 
-anvilgui_version = 1.5.3-SNAPSHOT
+anvilgui_version = 1.5.3-20220609.032626-7
 luckperms_version = 5.4
 essentials_version = 2.19.4
 griefprevention_version = 16.18
 
 pacpi_version = 1.3.0
+pacutilities_version = 1.1.2
 pacbirthday_version = 1.4.0
