--- a/gradle.properties
+++ b/gradle.properties
@@ -1,14 +1,13 @@
 pacprofile_group = fr.peaceandcube
 pacprofile_name = pacprofile
-pacprofile_version = 1.4.2
+pacprofile_version = 1.4.3-SNAPSHOT
 
-paper_version = 1.19.3-R0.1-SNAPSHOT
+paper_version = 1.19.4-R0.1-SNAPSHOT
 
-anvilgui_version = 1.6.3-20221221.160308-1
+anvilgui_version = 1.6.4-20230501.210626-1
 luckperms_version = 5.4
 essentials_version = 2.19.7
-griefprevention_version = 16.18
+griefprevention_version = 16.18.1
 
-pacpi_version = 1.3.0
-pacutilities_version = 1.2.0
-pacbirthday_version = 1.4.0
+pacutilities_version = 1.3.0
+pacbirthday_version = 1.5.0
