Show rank expiration - 1.4.3

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 pacprofile_group = fr.peaceandcube
 pacprofile_name = pacprofile
-pacprofile_version = 1.4.3-SNAPSHOT
+pacprofile_version = 1.4.3
 
 paper_version = 1.19.4-R0.1-SNAPSHOT
 
