--- a/gradle.properties
+++ b/gradle.properties
@@ -1,13 +1,13 @@
 pacprofile_group = fr.peaceandcube
 pacprofile_name = pacprofile
-pacprofile_version = 1.4.3
+pacprofile_version = 1.5.0-SNAPSHOT
 
 paper_version = 1.19.4-R0.1-SNAPSHOT
 
-anvilgui_version = 1.6.4-20230501.210626-1
+anvilgui_version = 1.6.6-20230609.001404-2
 luckperms_version = 5.4
-essentials_version = 2.19.7
+essentials_version = 2.20.0
 griefprevention_version = 16.18.1
 
-pacutilities_version = 1.3.0
+pacutilities_version = 1.3.2
 pacbirthday_version = 1.5.0
