--- a/build.gradle
+++ b/build.gradle
@@ -40,7 +40,7 @@ dependencies {
     compileOnly "com.github.TechFortress:GriefPrevention:${griefprevention_version}"
 
     compileOnly name: "pacutilities-${pacutilities_version}"
-    compileOnly name: "PACBirthday-${pacbirthday_version}"
+    compileOnly name: "pacbirthday-${pacbirthday_version}"
 }
 
 build {
