--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,7 +11,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest]
-        java: [17, 18]
+        java: [18]
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v3
