--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,8 @@
 pacprofile_group = fr.peaceandcube
 pacprofile_name = pacprofile
-pacprofile_version = 1.5.0
+pacprofile_version = 1.5.1-SNAPSHOT
 
-paper_version = 1.19.4-R0.1-SNAPSHOT
+paper_version = 1.20.1-R0.1-SNAPSHOT
 
 anvilgui_version = 1.6.6-20230609.001404-2
 luckperms_version = 5.4
