--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@ pacprofile_version = 1.5.1-SNAPSHOT
 
 paper_version = 1.20.1-R0.1-SNAPSHOT
 
-anvilgui_version = 1.6.6-20230609.001404-2
+anvilgui_version = 1.7.0-SNAPSHOT
 luckperms_version = 5.4
 essentials_version = 2.20.0
 griefprevention_version = 16.18.1
