--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'maven-publish'
     id 'com.github.johnrengelman.shadow' version '7.0.0'
 }
 
@@ -49,6 +50,8 @@ build {
 
 shadowJar {
     configurations = [project.configurations.include]
+
+    archiveFileName = "${archivesBaseName}-${version}.jar"
 }
 
 tasks.withType(JavaCompile).configureEach {
@@ -59,5 +62,23 @@ tasks.withType(JavaCompile).configureEach {
 processResources {
     filesMatching('plugin.yml') {
         expand(version: version)
+    }
+}
+
+publishing {
+    publications {
+        maven(MavenPublication) {
+            from components.java
+        }
+    }
+    repositories {
+        maven {
+            name = "GitHubPackages"
+            url = "https://maven.pkg.github.com/PeaceAndCubeMC/PACProfile"
+            credentials {
+                username = System.getenv("GITHUB_ACTOR")
+                password = System.getenv("GITHUB_TOKEN")
+            }
+        }
     }
 }
