--- a/gradle.properties
+++ b/gradle.properties
@@ -1,10 +1,10 @@
 pacprofile_group = fr.peaceandcube
 pacprofile_name = pacprofile
-pacprofile_version = 1.5.2
+pacprofile_version = 1.5.3-SNAPSHOT
 
-paper_version = 1.20.2-R0.1-SNAPSHOT
+paper_version = 1.20.4-R0.1-SNAPSHOT
 
-anvilgui_version = 1.9.0-SNAPSHOT
+anvilgui_version = 1.9.2-SNAPSHOT
 luckperms_version = 5.4
 essentials_version = 2.20.0
 griefprevention_version = 16.18.1
