--- a/gradle.properties
+++ b/gradle.properties
@@ -1,13 +1,13 @@
 pacprofile_group = fr.peaceandcube
 pacprofile_name = pacprofile
-pacprofile_version = 1.5.3
+pacprofile_version = 2.0-SNAPSHOT
 
 paper_version = 1.20.4-R0.1-SNAPSHOT
 
 anvilgui_version = 1.9.2-SNAPSHOT
 luckperms_version = 5.4
-essentials_version = 2.20.0
+essentials_version = 2.20.1
 griefprevention_version = 16.18.1
 
-pacutilities_version = 1.3.2
-pacbirthday_version = 1.5.0
+pacutilities_version = 1.3.3
+pacbirthday_version = 1.5.1
