--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,7 @@ repositories {
     // LuckPerms
     mavenCentral()
     // Paper
-    maven { url "https://papermc.io/repo/repository/maven-public/" }
+    maven { url "https://repo.papermc.io/repository/maven-public/" }
     // AnvilGUI
     maven { url "https://repo.codemc.io/repository/maven-snapshots/" }
     // Essentials
