--- a/gradle.properties
+++ b/gradle.properties
@@ -1,13 +1,13 @@
 pacprofile_group = fr.peaceandcube
 pacprofile_name = pacprofile
-pacprofile_version = 1.5.4
+pacprofile_version = 1.6.0-SNAPSHOT
 
-paper_version = 1.20.4-R0.1-SNAPSHOT
+paper_version = 1.21.3-R0.1-SNAPSHOT
 
-anvilgui_version = 1.9.6-SNAPSHOT
+anvilgui_version = 1.10.4-SNAPSHOT
 luckperms_version = 5.4
-essentials_version = 2.20.0
-griefprevention_version = 16.18.1
+essentials_version = 2.20.1
+griefprevention_version = 16.18.4
 
 pacutilities_version = 1.3.2
 pacbirthday_version = 1.5.0
