--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 pacprofile_group = fr.peaceandcube
 pacprofile_name = pacprofile
-pacprofile_version = 1.6.0-SNAPSHOT
+pacprofile_version = 1.6.0
 
 paper_version = 1.21.3-R0.1-SNAPSHOT
 
