--- a/build.gradle
+++ b/build.gradle
@@ -31,7 +31,7 @@ configurations {
 }
 
 dependencies {
-    compileOnly "io.papermc.paper:paper-api:${paper_version}"
+    implementation "io.papermc.paper:paper-api:${paper_version}"
 
     include "net.wesjd:anvilgui:${anvilgui_version}"
 
@@ -41,6 +41,8 @@ dependencies {
 
     compileOnly name: "pacutilities-${pacutilities_version}"
     compileOnly name: "pacbirthday-${pacbirthday_version}"
+
+    testImplementation "org.junit.jupiter:junit-jupiter:5.7.1"
 }
 
 build {
@@ -61,6 +63,10 @@ tasks {
     compileJava {
         options.release = 21
         options.encoding = StandardCharsets.UTF_8.name()
+    }
+
+    test {
+        useJUnitPlatform()
     }
 }
 
