--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ import java.nio.charset.StandardCharsets
 
 plugins {
     id 'java'
+    id 'checkstyle'
     id 'maven-publish'
     id 'com.github.johnrengelman.shadow' version '8.1.1'
 }
@@ -66,6 +67,11 @@ tasks {
     compileJava {
         options.release = 21
         options.encoding = StandardCharsets.UTF_8.name()
+    }
+
+    checkstyle {
+        configFile = rootProject.file("checkstyle.xml")
+        toolVersion = "10.21.4"
     }
 
     test {
