Change default name of claims

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 pacprofile_group = fr.peaceandcube
 pacprofile_name = pacprofile
-pacprofile_version = 1.6.2
+pacprofile_version = 1.7.0-SNAPSHOT
 
 paper_version = 1.21.8-R0.1-SNAPSHOT
 
